@@ -1,11 +1,5 @@
-DIST calculate-1.3.11.tar.bz2 172101 RMD160 2a8e849085ea8c9793b76a93f15e417dac97f5e2 SHA1 11681f7b0e7b306e3e87ac42d01a06fe447f9ec7 SHA256 a05528797eceec3bfcae030d7492e0d68bc2932091a73ee2544ff83ef0caf024
-DIST calculate-1.3.7.tar.bz2 208300 RMD160 7bfbfef3a8adcb2dbce00fc19aaf85ad89fae1c5 SHA1 46faa0074ca00e4dc8ad57204005a7b0a15a5816 SHA256 47071c948f77be4c6726d5583e84d56f2309ad803523d6d29337dee6ceb81742
-DIST calculate-1.3.8.tar.bz2 196312 RMD160 1200bfdfea1da3ca9eccdebb6e53dd8cee48b8d8 SHA1 e64f350cf506c6104192e927197b85305cb99d6f SHA256 d17cb1f4532730257f57d1228f7021d77173d1af9af85b6d723cfe603c4e6e1b
-DIST calculate-1.3.9.tar.bz2 169490 RMD160 61f11bebc6f1d834173f81511701b915db1b0e62 SHA1 0fde1894b7f1efe930c612277b7e33bd08f5ecc9 SHA256 c7c85b72424c076073dfbfcefffc5cc61500e7445f9fcae8b071ff5fd0d60c5d
-EBUILD calculate-1.3.11.ebuild 1901 RMD160 f9682e0ae7f54e3e93e9e6af6e1c37019911a39c SHA1 0cd0e54baa675ca7ee14b5685ff160e3dc02e81c SHA256 6ed3bec96c2835f94ebbb566dff268819e129afc766dbe915e50b4ed19c4e149
-EBUILD calculate-1.3.7.ebuild 1893 RMD160 6946189fad4177600d4c6edf98a0808db123e372 SHA1 5ad4118b1ed1af01963cf6d94ee52abf513238b5 SHA256 66e7a9588dbde86ea086c1def210886b321956f973b0f7441c0c5827666d19b5
-EBUILD calculate-1.3.8.ebuild 1895 RMD160 e1f57d7afe84d48a49ba99a31b4b1983df9188a5 SHA1 9880616b6fafb02e325e39db55839b82be0ba53b SHA256 75658041c65ced32e0aa7a034219f5dfa004d0a3e9ccad9e8d294cd320c6105b
-EBUILD calculate-1.3.9.ebuild 1893 RMD160 6946189fad4177600d4c6edf98a0808db123e372 SHA1 5ad4118b1ed1af01963cf6d94ee52abf513238b5 SHA256 66e7a9588dbde86ea086c1def210886b321956f973b0f7441c0c5827666d19b5
+DIST calculate-1.3.12.tar.bz2 170338 RMD160 d2b4ebee602ac05d9752bd52335c3318db440638 SHA1 1d361bcb53efc73684dffcca972987354ae237f8 SHA256 34d073fcb977bfdc8e8e38354a5171a9db9dcb65ec00ade10bba7ae302968d8f
+EBUILD calculate-1.3.12.ebuild 2003 RMD160 a405e275415510ab911be7a6b95d775e7fe2f93a SHA1 9c4acf07afff9ca4572025e6cfe91e5ac802c575 SHA256 cc785c400604c8109088ee041278c6643f5b24d1e4aa3b0704ec45e6eeac60ae
 EBUILD calculate-9999.ebuild 1475 RMD160 8f4e0606edf7539f9a485a0e5c5cb620d4632001 SHA1 1b9503b0bbe26d243b524571cc3bbb29af950199 SHA256 33381697753a42456a777e57110f261f4f56da7f6205d0b37867013e8104e4b9
-MISC ChangeLog 1048 RMD160 f6a05dc6a8f0a3ec6c0b3d1c83425d6ccf2e225e SHA1 3bc9fa36a99b8a3107333b66d78bb003a40de474 SHA256 ad53a142720a644684dfaaee3e6805a34c53b168303d22c9f01ebc0b02776d78
+MISC ChangeLog 1532 RMD160 8d065d1e53d29955c467b1e06cee655db845b362 SHA1 df1d85f6b71af72919479ede334fa1031f16c2a4 SHA256 3a5bced210ffe213a8765d3d77962ed8f908c4c00bc5b6bea9faaa9dd4452ff4
 MISC metadata.xml 301 RMD160 2b89953e755d47fdc10f6def8e9d30975ed5aba1 SHA1 fa349945c077ca3d0fd95693f04a60f2da15f467 SHA256 074eff7c846f7fc8f0e74e0d992bdda9432164f28c0f3cf8991a1e59aac38700
