@@ -2,6 +2,18 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-1.3.7.ebuild, -calculate-1.3.8.ebuild, -calculate-1.3.9.ebuild,
+  -calculate-1.3.11.ebuild, +calculate-1.3.12.ebuild:
+  Bump version.Removed previous.
+
+*calculate-1.3.12 (16 Apr 2010)
+
+  16 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-1.3.7.ebuild, -calculate-1.3.8.ebuild, -calculate-1.3.9.ebuild,
+  -calculate-1.3.11.ebuild, +calculate-1.3.12.ebuild:
+  Bump version. Removed previous.
+
 *calculate-1.3.11 (07 Apr 2010)
 
   07 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
